Add option to throttle requests per IP address
The use case is a given user with legitimate requests resulting
in high resource consumption. With these new options, that user's
requests are put on hold, favouring processing of other user's requests,
when the amount of concurrent requests for a given IP address reaches
a limit.

--- a/debian/thumbor.conf
+++ b/debian/thumbor.conf
@@ -173,3 +173,13 @@ ALLOW_UNSAFE_URL = True
     ## has already went through remote detection
     ## 'thumbor.filters.redeye',
 #]
+
+# Maximum amount of concurrent connections per client IP.
+# When the maximum is reached, requests coming from that client
+# will be put on hold, while requests from other clients will be treated.
+# This allows preventing a single client from hogging too many resources.
+MAX_CONNECTIONS_PER_IP = None
+
+# We might not want to put requests for a given IP on hold forever.
+# Setting this timeout limit makes requests held for too long 503 after that manys seconds.
+MAX_CONNECTIONS_PER_IP_TIMEOUT = None
