--- a/thumbor/thumbor.conf
+++ b/thumbor/thumbor.conf
@@ -190,3 +190,13 @@ ALLOW_UNSAFE_URL = True
 #]
 
 #JPEGTRAN_PATH = '/usr/local/bin/jpegtran'
+
+# Maximum amount of concurrent connections per client IP.
+# When the maximum is reached, requests coming from that client
+# will be put on hold, while requests from other clients will be treated.
+# This allows preventing a single client from hogging too many resources.
+MAX_CONNECTIONS_PER_IP = None
+
+# We might not want to put requests for a given IP on hold forever.
+# Setting this timeout limit makes requests held for too long 503 after that manys seconds.
+MAX_CONNECTIONS_PER_IP_TIMEOUT = None
